# ofinder

./: Cargo.toml  README.md  build.rs  cargo.toml  install.sh
.github/workflows/: rust.yaml
src/: main.rs
