[package]
name = "of"
version = "0.1.0"
authors = ["helson lin <helsonlin@outlook.com>"]
homepage = "https://github.com/helson-lin"
rust-version = "1.74.1"
edition = "2021"
description = "A Rust implementation of the find utility"

[dependencies]


[package.metadata.bundle]
name = "ofind"
identifier = "com.helsonlin.ofind"
icon = ["images/icon_256.png"]
copyright = "Copyright (c) LeeeSe 2024. All rights reserved."
short_description = "Termial Open folder"
resources = ["images/icon.png"]
